--- a/html-css9/css/style.css
+++ b/html-css9/css/style.css
@@ -1,6 +1,5 @@
 body {
 width:400px;
-height:450px;
 
 }
 
@@ -27,7 +26,7 @@ height:450px;
 	background :#3300ff;
 	width:250px;
 	height:250px;
-	float:right;
+	float:left;
 }
 
 .footer {
